# test1

./: .gitignore  LICENSE  README.md  annotate_subtask_script.py  eval.sh  evaluate.py  exec_script.sh  fixtures.py  legal.ipynb  pyproject.toml  requirements.txt  result-latex.ipynb  results_latex.ipynb
benchmark/: __init__.py  benchmark.py  benchmark_api.py  metrics.py
benchmark/llm_tools/: gpt_interface.py  ollama_interface.py  prompts.py
data/astronomy/: astronomy.json  question.txt
dr-input/: legal.json
dr-input/archeology/: archeology.json
dr-input/astronomy/: astronomy_random.json
experts/: quickstart_experts.ipynb
results/: aggregated_results.csv
results/BaselineLLMSystemClaude35FewShot/: archeology_measures_20250921_212039.csv  astronomy_measures_20250921_211857.csv  biomedical_measures_20250921_212359.csv  environment_measures_20250921_211916.csv  legal_measures_20250921_211643.csv  wildfire_measures_20250921_202502.csv
scripts/astronomy/: convert.sh
system/: api.py  baseline.py  cross_validation.py  reflection.py
systems/: BaselineLLMSystem.py  __init__.py  baseline_example.py  baseline_system.py  baseline_system_variations.py  dummy_system.py  generator_util.py  mixtrue_agent_example.py  reflection_example.py
tests/: test_caching_and_parallelization.py
workload/: archeology.json  astronomy.json  biomedical.json  demo.json  dr-inputs.ipynb  environment-sum.json  environment.json  jun-easy.json  jun-hard.json  jun-medium.json  legal-markos.json  legal-tiny.json  legal.ipynb  legal.json  wildfire.json  wildfire1.ipynb  wildfire1.json
(+396 files in other folders)
